--- a/index.ipynb
+++ b/index.ipynb
@@ -62,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "palermo = neighborhoods[-1]"
+    "palermo = neighborhoods[0]"
    ]
   },
   {
@@ -78,11 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca = neighborhoods"
+    "la_boca = neighborhoods[-1]"
    ]
   },
   {
