--- a/index.ipynb
+++ b/index.ipynb
@@ -483,7 +483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = recoleta"
+    "recoleta_marker = marker_"
    ]
   },
   {
